--- a/pom.xml
+++ b/pom.xml
@@ -110,11 +110,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
-        <dependency><!-- For unit test logging: configure in src/test/resources/logback-test.xml -->
+        <!-- For unit test logging: configure in src/test/resources/logback-test.xml -->
+        <!-- 
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
     </dependencies>
 
     <profiles>
