--- a/pom.xml
+++ b/pom.xml
@@ -111,12 +111,8 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <!-- For unit test logging: configure in src/test/resources/logback-test.xml -->
-        <!-- 
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <scope>test</scope>
-        </dependency> -->
+        <!-- <dependency> <groupId>ch.qos.logback</groupId> <artifactId>logback-classic</artifactId> 
+            <scope>test</scope> </dependency> -->
     </dependencies>
 
     <profiles>
@@ -189,6 +185,13 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
